--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Mindustry in Minecraft</title>
     </head>
     <body>
-        WIP. No website here (YET!)
+        <h1 id='MainText'>WIP. No website here (YET!)</h1>
     </body>
 </html>
